--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,13 @@
         <validation-api.version>2.0.1.Final</validation-api.version>
         <jsr305.version>3.0.2</jsr305.version>
         <logback-classic.version>1.2.3</logback-classic.version>
+
+        <junit-jupiter-api.version>5.7.2</junit-jupiter-api.version>
+        <junit-jupiter-params.version>5.7.0</junit-jupiter-params.version>
+        <testng.version>7.4.0</testng.version>
+        <mockito-core.version>${mockito-junit-jupiter.version}</mockito-core.version>
+        <assertj-core.version>3.20.1</assertj-core.version>
+        <mockito-junit-jupiter.version>3.11.1</mockito-junit-jupiter.version>
     </properties>
     <build>
         <plugins>
@@ -45,6 +52,43 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback-classic.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit-jupiter-api.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit-jupiter-params.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testng.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito-core.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj-core.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito-junit-jupiter.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
